# Calendiorama-Atlas-Temporis

./: .claudeignore  .dockerignore  .env.example  .gitignore  CALENDAR_ROADMAP_EN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  Ready for review  app.py  config.py  docker-compose.yml  project_plan_EN.md  prototype.html  pyproject.toml
api/: borders.py  calendars.py
calendars/: README.md  __init__.py  base.py  coptic.py  dispatcher.py  ethiopian.py  gregorian.py  hebrew.py  hijri.py  japanese.py  julian.py  persian.py
data/calendars/: aourednik_calendar_map.json  aourednik_names_raw.txt  gregorian_adoption.csv  gwcode_iso.json  japanese_eras.json  julian_adoption.csv  modern_transitions.json  region_calendar_map.json
maps/: loader.py  renderer.py
nginx/: nginx.conf
scripts/: build_japanese_eras.py  generate_gwcode_iso.py  list_aourednik_names.py
static/css/: style.css
static/js/: map.js
templates/: index.html  style.css
templates/partials/: calendar_panel.html
tests/calendars/: test_converters.py  test_coptic.py  test_ethiopian.py  test_gregorian.py  test_hebrew.py  test_hijri.py  test_japanese.py  test_julian.py  test_persian.py
