[project]
name = "calendiorama-atlas-temporis"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Langlois",email = "robin.langlois@es.fcm.travel"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
